Revision history for Perl application Lstu

0.20-0 2018-??-??
	- Improve safebrowsingcheck CLI (displays creators' IP addresses + other URLs from thoses IPs)

0.19-3 2018-09-08
	- Update translations

0.19-2 2018-09-08
	- Improve GSB object creation and GSB DB update

0.19-1 2018-09-08
	- Update translations

0.19-0 2018-09-08
	- Allow to use Google Safe Browsing database to check if the URLs are harmless
	  It uses a local copy of the GSB DB, so Google won't see the URLs to shorten
	- safebrowsingcheck CLI to check all the URLs in the database against GSB DB.
	  usage: carton exec script/lstu safebrowsingcheck
	- Fix bugs (#45)

0.18-1 2018-08-21
	- Update url CLI help message

0.18-0 2018-08-20
	- Add option to store IP address of URL creator
	- Add command to search URL with the IP address of its creator
	- Add option to blacklist IP address
	- Allow to remove multiple URLs at once with the CLI

0.17-3 2018-08-20
	- Fix missing default db_path

0.17-2 2018-05-15
	- Add ability to respond to /robots.txt either by sending the file if it exists or by answering 404

0.17-1 2018-04-28
	- Fix bug in making LDAP and Htpasswd dependencies optional

0.17 2018-04-28
	- Import URL into cookie by JSON upload
	- Add X-Content-Type-Options, X-XSS-Protection and X-Frame-Options headers
	- More dependencies become optional to install
	- Some refactoring
	- Add LDAP tests to test suite

0.16-1 2018-04-27
	- Fix bug in LDAP authentication

0.16 2018-04-24
	- Add Content-Security-Policy header
	- Use Memcached for cache system (previous cache was unstable)

0.15-2 2018-04-23
	- Update Mojolicious::Plugin::GzipStatic

0.15-1 2018-04-23
	- Fix url command help function

0.15 2018-04-23
	- Add CLI command to search and delete url
	- Fix CI

0.14-1 2018-04-23
	- Fix for PostgreSQL and MySQL connections

0.14 2018-04-22
	- Use same DB backend for Minion than db_type

0.13-1 2018-04-22
	- Better CSS minification

0.13 2018-04-22